--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.cloud.stream.bindings.output.destination=adif
+spring.cloud.stream.bindings.output.destination=userv03
 spring.cloud.stream.bindings.output.content-type=application/json
-spring.cloud.stream.bindings.input.destination=adif
+spring.cloud.stream.bindings.input.destination=userv01
 spring.cloud.stream.bindings.input.content-type=application/json
+spring.cloud.stream.bindings.input1.destination=userv02
+spring.cloud.stream.bindings.input1.content-type=application/json
 spring.cloud.stream.kafka.binder.brokers=kafka-kafka-bootstrap.adifv2.svc
 spring.cloud.stream.kafka.binder.defaultBrokerPort=9092
 spring.application.name=cont-service
